--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@
     --myfont:Arial, Helvetica, sans-serif;
   }
 
+  * {box-sizing:border-box;}
+
 body{
     background-color: rgb(255, 255, 255);
     color: rgb(0, 0, 0);
@@ -39,6 +41,7 @@ body{
   .topnav #myLinks {
     display: none;
     color: white !important;
+    font-family: var(--myfont);
   }
 
   #holder{
@@ -68,8 +71,7 @@ body{
     position: absolute;
     right: 0;
     top: 0;
-    padding-bottom: 14.8px;
-    height: 13px;
+    padding-bottom: 6.8px;
   }
 
   #logoText{
@@ -112,6 +114,259 @@ body{
 
 
 
+/* Slide style begins here */
+
+
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 100%;
+  position: relative;
+  margin: auto;
+  border: solid 0px black;
+}
+
+
+.slideshow-container img{
+    width:100%;
+}
+
+/* Hide the images by default */
+.mySlides {
+ display: none;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  font-family: var(--myfont);
+  top: 50px;
+  right: 0;
+  bottom: 8px;
+  width: 40%;
+  text-align: left;
+  height:  auto;
+  background-color: rgba(255, 6, 6, 0.6);
+  margin-right: 50px;
+  border-radius: 10px;
+  font-size:13px;
+
+}
+
+.slideshow-container #OpStyle{
+    background-color: rgb(39, 39, 39);
+}
+.numbertext{
+    display: none;
+}
+
+/* Number text (1/3 etc) */
+
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #faf5f5;
+  height: 40px;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+
+/* Contents items starts here */
+.contents{
+  width: 100%;
+  height: auto;
+  background-color: black;
+  justify-items:normal;
+  padding: 10px;
+  text-align: center;
+}
+
+.contentItems{
+  width:80%;
+  height: 350px;
+  border: solid 1px white;
+  position: relative;
+  margin: 50px auto;
+  border-radius: 5px;
+  
+}
+
+.Content-Header-text{
+  font-size: 1.50rem;
+}
+
+.favIconStyle{
+  font-size:6em;
+  color: whitesmoke;
+  padding-top: 30px;
+}
+
+
+/* Slide style ends here */
+
+.text button{
+      background-color: rgba(255, 255, 255, 0.918);
+      padding: 5px;
+      border-radius: 10px;
+      outline-style: none;
+      align-items: center;
+      position: relative;
+      top: 5px;
+      border: 1px saddlebrown;
+      color: black;
+      cursor: pointer;
+      box-shadow: 0px 0.5px 5px rgb(68, 67, 67);
+}
+
+.addsContainer{
+    display: none;
+}
+
+.footer-distributed {
+    background-color: #292c2f;
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
+    box-sizing: border-box;
+    width: 100%;
+    bottom:0;
+    text-align: left;
+    font: normal 16px sans-serif;
+    padding: 45px 50px;
+  }
+  
+  .footer-distributed .footer-left p {
+    color: #8f9296;
+    font-size: 14px;
+    margin: 0;
+  }
+  /* Footer links */
+  
+  .footer-distributed p.footer-links {
+    font-size: 18px;
+    font-weight: bold;
+    color: #ffffff;
+    margin: 0 0 10px;
+    padding: 0;
+    transition: ease .25s;
+  }
+  
+  .footer-distributed p.footer-links a {
+    display: inline-block;
+    line-height: 1.8;
+    text-decoration: none;
+    color: inherit;
+    transition: ease .25s;
+  }
+  
+  .footer-distributed .footer-links a:before {
+    content: "·";
+    font-size: 20px;
+    left: 0;
+    color: #fff;
+    display: inline-block;
+    padding-right: 5px;
+  }
+  
+  .footer-distributed .footer-links .link-1:before {
+    content: none;
+  }
+  
+  .footer-distributed .footer-right {
+    float: right;
+    margin-top: 6px;
+    max-width: 180px;
+  }
+  .move{
+      position:relative;
+      top: 5px;
+  }
+  .footer-distributed .footer-right a {
+    display: inline-block;
+    width: 35px;
+    height: 35px;
+    background-color: #33383b;
+    border-radius: 2px;
+    font-size: 20px;
+    color: #ffffff;
+    text-align: center;
+    line-height: 35px;
+    margin-left: 3px;
+    transition:all .25s;
+  }
+  .Blogo{
+    display: flex;
+  }
+  
+  .footer-distributed .footer-right a:hover{transform:scale(1.1); -webkit-transform:scale(1.1);}
+  
+  .footer-distributed p.footer-links a:hover{text-decoration:underline;}
+
+
+
 
 
   /**********Tablet designs starts here**********/
@@ -145,7 +400,7 @@ body{
     
     width: 200px;
     height: auto;
-     border: solid 1px black;
+     border: solid 0px black;
 }
 
 .logoDiv img{
@@ -206,33 +461,7 @@ text-decoration: underline;
 .searchInput{
     display: none;
 }
-/* 
-.searchInput{
-   display: block;
-   position: absolute;
-   right: 0;
-   margin-top:5px;
-   margin-right:5px;
-   outline: none;
-   outline-style: none;
-   border-radius: 5px;
 
-}
-
-.searchInput input{
-    border-radius: 10px;
-    padding: 10px;
-    font-size: 1.1em;
-    outline-style: none;
-}
-
-.hide{
-        display: none;
-}
-
-
-
- */
 
   }
 
@@ -248,6 +477,8 @@ text-decoration: underline;
     
     .Idesknav{
         border: solid 1px red;
+        border-left: none;
+        border-right: none;
         height: 70px;
         display: flex;
         font-size: 1.2rem;
@@ -322,28 +553,78 @@ text-decoration: underline;
 .Isize:hover{
     transform: translateY(-4px);
 }
-.searchInputShow{
-    display: block;
-    position: absolute;
-    right: 0;
-    margin-top:5px;
-    margin-right:5px;
-    outline: none;
-    outline-style: none;
-    border-radius: 5px;
- 
- }
- 
- .searchInput input{
-     border-radius: 10px;
-     padding: 10px;
-     font-size: 1.1em;
-     outline-style: none;
-     border: solid 2px #d71e2b;
+ .text {
+     font-size: 1.8em;
  }
 
   
+.addsContainer{
+    display:  inline-grid;
+    grid-template-columns: 1fr 10px 1fr;
+    width: 90%;
+    border: solid 0px black;
+    height: auto;
+    position: absolute;
+    bottom: 0;
+    justify-content: inherit;
+    box-sizing: border-box;
+    margin-bottom: 10px;
+    justify-items:center;
+    left: 25px;
+    border-radius: 15px 15px 0px 0px;
+    background-color: #f2f2f2;
+   
+
+}
+
+#divider{
+      position: absolute;
+      bottom: 0;
+      width: 2px;
+      height: 50px;
+      border: solid 1px black;
+      margin-right: 30px;
+      margin-bottom: 10px;
+}
+
+.adds{
+    border: solid 0px black;
+    width: 70%;
+    height: 70px;
+    
+}
+
+.addsContainer img{
+    width: 40%;
+}
+ 
+
+/* Footer starts here */
 
 
 
 }
+
+
+
+
+
+  
+  /* Media Queries for footer*/
+  
+  @media (max-width: 600px) {
+    .footer-distributed .footer-left, .footer-distributed .footer-right {
+      text-align: center;
+    }
+    .footer-distributed .footer-right {
+      float: none;
+      margin: 0 auto 20px;
+    }
+    .footer-distributed .footer-left p.footer-links {
+      line-height: 1.8;
+    }
+    .Blogo , .copyright{
+      text-align: center;
+      display: block;
+    }
+  }
